fixed mobilemenu and filter overflow and closing

--- a/src/components/hookComponents/header/header.scss
+++ b/src/components/hookComponents/header/header.scss
@@ -3,6 +3,7 @@
 
 .main-header {
   border-bottom: 0;
+  height: 13rem;
 
   .css-l4u8b9-MuiInputBase-root-MuiInput-root {
     border-bottom: 1px solid $black;
